fixed heading font-size on mobile and width of wrp

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ html body {
 
 .huddle-content__heading {
   font-family: 'Poppins', sans-serif;
-  font-size: clamp(1.6rem, 10vw, 2.5rem);
+  font-size: clamp(1.6rem, 5vw, 2.5rem);
   margin-bottom: .5em;
 }
 
@@ -77,6 +77,7 @@ html body {
   grid-template-columns: repeat(3, 1.9em);
   gap: .5em;
   place-content: center;
+  margin-bottom: 1em;
 }
 
 .socials__container--fb {
@@ -124,11 +125,11 @@ svg {
   html body {
     background: url(./images/bg-desktop.svg), var(--violet);
     background-repeat: no-repeat;
-    background-size: 102em;
+    background-size: cover;
   }
 
   .wrapper {
-    width: 80em;
+    max-width: 80rem;
     margin: 0 auto;
   }
 
